# wake-o-matic

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  README_8md.html  actionStateMachine_8cpp.html  actionStateMachine_8h.html  actionStateMachine_8h.js  actionStateMachine_8h_source.html  action_8cpp.html  action_8h.html  action_8h_source.html  annotated.html  annotated_dup.js  cameraTest.cpp  camera_8cpp.html  camera_8h.html  camera_8h_source.html  classAction-members.html  classAction.html  classAction.js  classActionStateMachine-members.html  classActionStateMachine.html  classActionStateMachine.js  classCamera-members.html  classCamera.html  classCamera.js  classEyeStatus-members.html  classEyeStatus.html  classEyeStatus.js  classFilter-members.html  classFilter.html  classFilter.js  classFrameProcessor-members.html  classFrameProcessor.html  classFrameProcessor.js  classLogger-members.html  classLogger.html  (+73 more)
.github/workflows/: blank.yml  publish-docs.yml
CAD/STL/: Wake-o-Matic.stl
camera/: camera.h  cameraTest.cpp
docs/: Pitch.pptx  meetingMinutes.xlsx  realtimePog.pptx
docs/Diagrams/: Action State Machine Diagram.drawio  Frame Parser State Machine Diagram.drawio
docs/Diagrams/FSM/: Action State Machine Diagram.drawio  Frame Parser State Machine Diagram.drawio  Logger State Machine Diagram.drawio  Main State Machine Diagram.drawio
filter/: filter.cpp  filter.h  filter_test.cpp
include/: filter.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+23 more)
src/: CMakeLists.txt  camera.cpp  filter.cpp  logging.cpp  logging.hpp  main.cpp
src/modules/: CMakeLists.txt  action.cpp  action.h  actionStateMachine.cpp  actionStateMachine.h  camera.cpp  camera.h  eyeStatus.cpp  eyeStatus.h  filter.cpp  filter.h  frameProcessor.cpp  frameProcessor.h  logging.cpp  logging.h  sleepDetect.cpp  sleepDetect.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  cameraTest.cpp  cppTests.cpp  cppTests.h  mainUnitTests.cpp  runTests.cpp  tests.cpp  tests.h
